--- a/css/menu.css
+++ b/css/menu.css
@@ -11,6 +11,7 @@
 body {
 	
 	background-attachment: fixed;
+	background: radial-gradient(red, yellow, green, black);
 	/*background-image: url('ptitbg.png'); */
 }
 nav {
