lien menu vers qui-nous-sommes.htm + content width

--- a/css/menu.css
+++ b/css/menu.css
@@ -11,7 +11,7 @@
 body {
 	
 	background-attachment: fixed;
-	background: radial-gradient(red, yellow, green, black);
+	/*background: radial-gradient(red, yellow, green, black);*/               /* pose des problèmes pour les petites pages */
 	/*background-image: url('ptitbg.png'); */
 }
 nav {
