--- a/css/index.css
+++ b/css/index.css
@@ -1,41 +1,12 @@
 /* CONTENU --------------------------------------- */
 
-iframe {
-	
-	display: block;
-	margin-top: 3%;
-	margin: 30px auto;
-}
-
-#contenu {
+#actus {
 	border: 3px solid brown;
-}
-
-#contenu div {
-	vertical-align: top;
-	display: inline-block;
-}
-
-#contenu div:nth-child(1) {
-	background-color: #F78181; /*pink*  ou #c94c4c */
-	width: 14%;
-	height: inherit;
-	overflow: auto;
-}
-
-#contenu div:nth-child(2) {
 	background-color: #F4FA58; /*yellow*/
 	width: 70%;
 }
 
-#contenu div:nth-child(3) {
-	background-color: #FA58AC; /*magenta*/
-	width: 14%;
-	height: inherit;
-	overflow: auto;
-}
-
-#contenu p {
+#actus p {
 	/*text-align: center;*/
 	margin: 1.5%;
 }
@@ -45,7 +16,8 @@ iframe {
 	position: fixed;
 	bottom: 25px;
 	right: 30px;
-}	
+}
+
 #ancre {
 	width: 50px;
 }
