--- a/css/menu.css
+++ b/css/menu.css
@@ -78,3 +78,14 @@ li a:visited {
 	color: #61210B;
 	text-decoration: none;
 }
+
+.ancre_menu {
+	opacity: 0.0;
+	position: fixed;
+	bottom: 25px;
+	right: 30px;
+}
+
+.ancre_menu img {
+	width: 50px;
+}
