--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,5 @@
+/* ---------------------------------------------- MENU */
+
 h1 {
 	color: #04B45F;
 	font-size: 50px;
@@ -64,11 +66,6 @@ nav > ul > li > ul > li {
 	padding-bottom: 4px;
 }
 
-footer {
-	text-align: center;
-}
-
-
 li a:link {
 	color: #61210B; /*brown*/
 	text-decoration: none;
@@ -94,4 +91,10 @@ li a:visited {
 
 .ancre_menu img {
 	width: 50px;
+}
+
+/* ---------------------------------------- PIED DE PAGE */
+
+footer {
+	text-align: center;
 }
