--- a/css/animaux.css
+++ b/css/animaux.css
@@ -1,38 +1,19 @@
-/* CONTENU --------------------------------------- */
-
-iframe {
-	
-	display: block;
-	margin-top: 3%;
-	margin: 30px auto;
-}
-
-#contenu {
+#animaux {
 	border: 3px solid brown;
-}
-
-#contenu div {
-	vertical-align: top;
-	display: inline-block;
-}
-
-#contenu div:nth-child(1) {
-	background-color: #F78181; /*pink*/
-	width: 14%;
-	height: inherit;
-	overflow: auto;
-}
-
-#contenu div:nth-child(2) {
 	background-color: #F4FA58; /*yellow*/
 	width: 70%;
+	margin: auto;
+}
+
+#animaux p {
+	text-align: center;
 }
 
 h3 {
 	text-align: center;
 }
 
-img.animaux {
+img.animal {
 	display: block;
 	margin-left: auto;
     margin-right: auto;
@@ -41,38 +22,12 @@ img.animaux {
 	height: auto;
 }
 
-#contenu div:nth-child(3) {
-	background-color: #FA58AC; /*magenta*/
-	width: 14%;
-	height: inherit;
-	overflow: auto;
-	vertical-align: right;
-}
-
-#contenu p {
-	text-align: center;
-}
-
 .ancre_menu {
 	opacity: 0.0;
 	position: fixed;
 	bottom: 25px;
 	right: 30px;
-}	
-#ancre {
-	width: 50px;
 }
-
-h1 {
-	color: #04B45F;
-	font-size: 50px;
-	padding: 20px;
-	padding-bottom: 15px;
-}
-
-
-
-
 
 
 
