--- a/css/questionnaire.css
+++ b/css/questionnaire.css
@@ -13,6 +13,11 @@ table {
 	border: solid 1px brown;
 }
 
+table > table {
+	width: 100%;
+	border: solid 1px brown;
+}
+
 @keyframes pourcentage {
 
 	from {
