--- a/css/questionnaire.css
+++ b/css/questionnaire.css
@@ -1,35 +1,31 @@
 form {
 	width: 96%;
 	height: auto;
-	padding: none;
-	padding-left: 2%;
-	padding-bottom: 10px;
+	padding: 3px;
 	/* padding: 5px; */
+	background-color: lightblue;
+	border-style: double;
+	border: 1px solid brown;
+	margin: auto;
 }
 
 table {
 	width: 100%;
 	background-color: lightblue;
-	border: solid 1px brown;
-}
-
-table > table {
-	width: 100%;
-	border: solid 1px brown;
+	border: 1px solid brown;
 }
 
 @keyframes pourcentage {
-
 	from {
 		opacity: 0;
 		width: 0;
 	}
 }
 
+.resultats {}
+
 .resultat {
-	
 	white-space: nowrap;
-	text-align: left !important; /* important car intérfère avec animaux.css */
 	padding: 0.2em 0.5em;
 	margin: 1em 10px;
 	background-color: rgba(200, 180, 0, 0.7);
@@ -37,7 +33,9 @@ table > table {
 	/* animation-name en JS */
 	animation-duration: 0.9s;
 	animation-iteration-count: 1;
-	opacity: 0.5;
+	opacity: 0.2;
+	
+	border: 1px dashed black;
 }
 
 
