--- a/css/animaux.css
+++ b/css/animaux.css
@@ -3,6 +3,8 @@
 	background-color: #F4FA58; /*yellow*/
 	width: 70%;
 	margin: auto;
+	
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1.0));
 }
 
 #animaux p {
