--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,12 @@ p {
 	margin: 0.5%;
 	margin-bottom: 1%;
 	border-radius: 16px;
+	background: radial-gradient(red, white);
+}
+
+#actus p {
+
+	margin-top: 3%;
 }
 
 .bouton a {
