--- a/css/animaux.css
+++ b/css/animaux.css
@@ -4,7 +4,7 @@
 	width: 70%;
 	margin: auto;
 	
-	background: linear-gradient(to bottom, rgba(244, 250, 88, 1.0), rgba(241, 167, 167, 1));
+	background: linear-gradient(to bottom, rgba(244, 250, 88, 1.0), black);
 }
 
 #animaux p {
